Edit index.html and lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,39 @@
     <title>Lasagna</title>
 </head>
 <body>
-    
+    <h1>Lasagna Recipe</h1>
+    <img src="https://images.unsplash.com/photo-1574894709920-11b28e7367e3?q=80&w=1035&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="310" width="310">
+    <h2>Description</h2>
+    <p>This homemade lasagna is the ultimate comfort food, layering rich and savory marinara sauce, creamy ricotta cheese, perfectly seasoned ground beef, and melty mozzarella. The key to a delicious lasagna is in the layers — each one contributing to a harmonious blend of flavors. A hearty meat sauce simmers with garlic, onions, and herbs, then gets sandwiched between tender lasagna noodles, followed by a generous spread of creamy ricotta and mozzarella. Baked to golden perfection, the top layer is slightly crispy, while the inside remains bubbling and gooey. Whether served for a family dinner or a gathering with friends, this lasagna is sure to be a crowd-pleaser.</p>
+    <p>This recipe also allows for some flexibility — you can make it your own by adding vegetables like spinach or mushrooms, or by swapping out the ground beef for ground turkey or plant-based options. The lasagna can even be made ahead of time and stored in the fridge, making it a great dish to prep for busy days. Paired with a fresh salad and garlic bread, it is a meal that is sure to satisfy all appetites.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>12 lasagna sheets</li>
+        <li>1 lb ground beef</li>
+        <li>1 onion, chopped</li>
+        <li>3 cloves garlic, minced</li>
+        <li>1 (24 oz) jar marinara sauce</li>
+        <li>1 (15 oz) container ricotta cheese</li>
+        <li>2 cups shredded mozzarella cheese</li>
+        <li>1/2 cup grated parmesan cheese</li>
+        <li>1 large egg</li>
+        <li>2 teaspoons dried basil</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>Salt and pepper to taste</li>
+        <li>Fresh basil (optional, for garnish)</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol type="1">
+        <li>Preheat the oven to 375°F (190°C).</li>
+        <li>Cook the lasagna noodles according to package instructions, drain, and set aside.</li>
+        <li>In a large pan, brown the ground beef over medium heat, breaking it up with a spoon. Add chopped onion and minced garlic, cooking until softened, about 5 minutes.</li>
+        <li>Stir in the marinara sauce, dried basil, oregano, and salt and pepper. Simmer for 10-15 minutes to allow the flavors to blend.</li>
+        <li>In a separate bowl, mix the ricotta cheese, egg, and Parmesan. Season with a pinch of salt and pepper.</li>
+        <li>Assemble the lasagna: Spread a thin layer of the meat sauce on the bottom of a 9x13-inch baking dish. Add a layer of lasagna noodles, then a layer of the ricotta mixture, followed by a layer of mozzarella. Repeat the layers, finishing with a layer of meat sauce and mozzarella on top.</li>
+        <li>Cover with foil (to prevent sticking, you can spray the foil with cooking spray) and bake for 30 minutes.</li>
+        <li>Remove the foil and bake for an additional 10-15 minutes, or until the cheese is bubbly and golden brown.</li>
+        <li>Let the lasagna rest for 10 minutes before serving. Garnish with fresh basil if desired. Enjoy!</li>
+    </ol>
+    <p><a href="../index.html">Home</a></p>
 </body>
 </html>
