--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/chicken-alfredo.html">Chicken Alfredo Recipe</a></li>
+        <li><a href="recipes/banana-bread.html">Banana Bread Recipe</a></li>
+    </ul>
 </body>
 </html>
