Edit index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="main-h1">Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="recipes/chicken-alfredo.html">Chicken Alfredo Recipe</a></li>
-        <li><a href="recipes/banana-bread.html">Banana Bread Recipe</a></li>
+        <li class="lasagna box"><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li class="chicken-alfredo box"><a href="recipes/chicken-alfredo.html">Chicken Alfredo Recipe</a></li>
+        <li class="banana-bread box"><a href="recipes/banana-bread.html">Banana Bread Recipe</a></li>
     </ul>
 </body>
 </html>
