Edit recipes/ README.md and styles.css

--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Bread Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Banana Bread Recipe</h1>
-    <img src="https://images.unsplash.com/photo-1606101273945-e9eba91c0dc4?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="310" width="500">
+    <div class="img-wr">
+    <h1 class="main-h1">Banana Bread Recipe</h1>
+    <img class="img-ed" src="https://images.unsplash.com/photo-1606101273945-e9eba91c0dc4?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="310" width="500">
+    </div>
+    <div class="b-desc-wrapper">
     <h2>Description</h2>
-    <p>This moist and flavorful banana bread is the perfect way to use up overripe bananas, turning them into a sweet, comforting treat that is perfect for breakfast, a snack, or even dessert. The bananas add natural sweetness and moisture, creating a dense yet soft loaf that is full of rich flavor. Combined with a hint of vanilla and a sprinkle of cinnamon, each bite is a nostalgic, melt-in-your-mouth experience. Whether you enjoy it fresh out of the oven, toasted with a pat of butter, or with a cup of coffee, this banana bread is a timeless favorite.</p>
-    <p>What makes this banana bread even better is its versatility. You can easily customize it by adding chocolate chips, nuts, or dried fruits for extra texture and flavor. It is an easy-to-make recipe that does not require any fancy ingredients — just a few pantry staples and ripe bananas. Plus, the aroma that fills the kitchen as it bakes is irresistible. It is a great recipe for beginner bakers, as the steps are simple, and the result is always a crowd-pleaser.</p>
-    <h3>Ingredients</h3>
-    <ul>
+    <p class="b-desc">This moist and flavorful banana bread is the perfect way to use up overripe bananas, turning them into a sweet, comforting treat that is perfect for breakfast, a snack, or even dessert. The bananas add natural sweetness and moisture, creating a dense yet soft loaf that is full of rich flavor. Combined with a hint of vanilla and a sprinkle of cinnamon, each bite is a nostalgic, melt-in-your-mouth experience. Whether you enjoy it fresh out of the oven, toasted with a pat of butter, or with a cup of coffee, this banana bread is a timeless favorite.</p>
+    <p class="b-desc">What makes this banana bread even better is its versatility. You can easily customize it by adding chocolate chips, nuts, or dried fruits for extra texture and flavor. It is an easy-to-make recipe that does not require any fancy ingredients — just a few pantry staples and ripe bananas. Plus, the aroma that fills the kitchen as it bakes is irresistible. It is a great recipe for beginner bakers, as the steps are simple, and the result is always a crowd-pleaser.</p>
+    </div>
+    <h3 class="b-ing">Ingredients</h3>
+    <ul class="b-ing">
         <li>3 ripe bananas, mashed</li>
         <li>1/3 cup melted butter</li>
         <li>1 teaspoon baking soda</li>
@@ -24,8 +29,8 @@
         <li>1/2 teaspoon cinnamon (optional)</li>
         <li>1/2 cup chopped walnuts or chocolate chips (optional)</li>
     </ul>
-    <h3>Steps</h3>
-    <ol>
+    <h3 class="b-steps">Steps</h3>
+    <ol class="b-steps">
         <li>Preheat the oven to 350°F (175°C) and grease a 4x8-inch loaf pan.</li>
         <li>Mash the bananas in a large bowl until smooth. Stir in the melted butter.</li>
         <li>Mix in the sugar, egg, and vanilla extract. Stir until well combined.</li>
@@ -36,6 +41,6 @@
         <li>Bake for 60-65 minutes, or until a toothpick inserted into the center comes out clean.</li>
         <li>Let the bread cool in the pan for 10 minutes, then remove and transfer to a wire rack to cool completely. Slice and enjoy!</li>
     </ol>
-    <p><a href="../index.html">Home</a></p>
+    <a href="../index.html"><button id="btn">Home</button></a>
 </body>
 </html>
