--- a/recipes/chicken-alfredo.html
+++ b/recipes/chicken-alfredo.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Alfredo Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Chicken Alfredo Recipe</h1>
-    <img src="https://images.unsplash.com/photo-1645112411341-6c4fd023714a?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="310" width="500">
+    <div class="img-wr">
+    <h1 class="main-h1">Chicken Alfredo Recipe</h1>
+    <img class="img-ed" src="https://images.unsplash.com/photo-1645112411341-6c4fd023714a?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="310" width="500">
+    </div>
+    <div class="b-desc-wrapper">
     <h2>Description</h2>
-    <p>This creamy Chicken Alfredo pasta is the epitome of comfort food, featuring tender, juicy chicken breast paired with fettuccine noodles in a rich and velvety Alfredo sauce. The sauce is made from scratch with butter, heavy cream, garlic, and freshly grated Parmesan cheese, creating a smooth, luxurious texture that coats every strand of pasta. The chicken is seared to golden perfection, then sliced and served on top of the pasta, adding a satisfying depth of flavor. With its indulgent sauce and savory chicken, this dish is perfect for a cosy dinner or even as a showstopper for guests</p>
-    <p>Not only is this Chicken Alfredo pasta delicious, but it is also surprisingly simple to make at home. You can whip up the creamy sauce while the chicken cooks, making this meal both efficient and decadent. You can add a touch of garlic bread on the side or a light green salad to balance out the richness of the dish. Whether you're cooking for yourself or for family and friends, this recipe is sure to impress and leave everyone asking for seconds.</p>
-    <h3>Ingredients</h3>
-    <ul>
+    <p class="b-desc">This creamy Chicken Alfredo pasta is the epitome of comfort food, featuring tender, juicy chicken breast paired with fettuccine noodles in a rich and velvety Alfredo sauce. The sauce is made from scratch with butter, heavy cream, garlic, and freshly grated Parmesan cheese, creating a smooth, luxurious texture that coats every strand of pasta. The chicken is seared to golden perfection, then sliced and served on top of the pasta, adding a satisfying depth of flavor. With its indulgent sauce and savory chicken, this dish is perfect for a cosy dinner or even as a showstopper for guests</p>
+    <p class="b-desc">Not only is this Chicken Alfredo pasta delicious, but it is also surprisingly simple to make at home. You can whip up the creamy sauce while the chicken cooks, making this meal both efficient and decadent. You can add a touch of garlic bread on the side or a light green salad to balance out the richness of the dish. Whether you're cooking for yourself or for family and friends, this recipe is sure to impress and leave everyone asking for seconds.</p>
+    </div>
+    <h3 class="b-ing">Ingredients</h3>
+    <ul class="b-ing">
         <li>2 boneless, skinless chicken breasts</li>
         <li>8 oz fettuccine pasta</li>
         <li>3 tablespoons butter</li>
@@ -25,8 +30,8 @@
         <li>1/2 teaspoon italian seasoning (optional)</li>
         <li>Fresh parsley, chopped (for garnish)</li>
     </ul>
-    <h3>Steps</h3>
-    <ol>
+    <h3 class="b-steps">Steps</h3>
+    <ol class="b-steps">
         <li>Cook the fettuccine: Boil a large pot of salted water and cook the fettuccine according to package instructions. Drain and set aside.</li>
         <li>Cook the chicken: While the pasta cooks, season both sides of the chicken breasts with salt, pepper, and Italian seasoning (if using). Heat olive oil in a skillet over medium-high heat. Cook the chicken for 6-7 minutes per side, or until golden brown and fully cooked. Remove from the pan and let rest before slicing into strips.</li>
         <li>Make the Alfredo sauce: In the same skillet, melt butter over medium heat. Add minced garlic and sauté for 1 minute, until fragrant. Slowly pour in the heavy cream and whole milk, stirring constantly. Bring to a simmer and cook for 3-4 minutes to thicken slightly.</li>
@@ -34,6 +39,6 @@
         <li>Combine pasta and sauce: Add the cooked fettuccine to the skillet with the Alfredo sauce, tossing to coat the pasta evenly.</li>
         <li>Serve: Divide the pasta among plates, top with sliced chicken, and garnish with fresh parsley. Serve immediately and enjoy!</li>
     </ol>
-    <p><a href="../index.html">Home</a></p>
+    <a href="../index.html"><button id="btn">Home</button></a>
 </body>
 </html>
