--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Lasagna Recipe</h1>
-    <img src="https://images.unsplash.com/photo-1619895092538-128341789043?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="310" width="500">
+    <div class="img-wr">
+    <h1 class="main-h1">Lasagna Recipe</h1>
+    <img class="img-ed" src="https://images.unsplash.com/photo-1619895092538-128341789043?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="310" width="500">
+    </div>
+    <div class="b-desc-wrapper">
     <h2>Description</h2>
-    <p>This homemade lasagna is the ultimate comfort food, layering rich and savory marinara sauce, creamy ricotta cheese, perfectly seasoned ground beef, and melty mozzarella. The key to a delicious lasagna is in the layers — each one contributing to a harmonious blend of flavors. A hearty meat sauce simmers with garlic, onions, and herbs, then gets sandwiched between tender lasagna noodles, followed by a generous spread of creamy ricotta and mozzarella. Baked to golden perfection, the top layer is slightly crispy, while the inside remains bubbling and gooey. Whether served for a family dinner or a gathering with friends, this lasagna is sure to be a crowd-pleaser.</p>
-    <p>This recipe also allows for some flexibility — you can make it your own by adding vegetables like spinach or mushrooms, or by swapping out the ground beef for ground turkey or plant-based options. The lasagna can even be made ahead of time and stored in the fridge, making it a great dish to prep for busy days. Paired with a fresh salad and garlic bread, it is a meal that is sure to satisfy all appetites.</p>
-    <h3>Ingredients</h3>
-    <ul>
+    <p class="b-desc">This homemade lasagna is the ultimate comfort food, layering rich and savory marinara sauce, creamy ricotta cheese, perfectly seasoned ground beef, and melty mozzarella. The key to a delicious lasagna is in the layers — each one contributing to a harmonious blend of flavors. A hearty meat sauce simmers with garlic, onions, and herbs, then gets sandwiched between tender lasagna noodles, followed by a generous spread of creamy ricotta and mozzarella. Baked to golden perfection, the top layer is slightly crispy, while the inside remains bubbling and gooey. Whether served for a family dinner or a gathering with friends, this lasagna is sure to be a crowd-pleaser.</p>
+    <p class="b-desc">This recipe also allows for some flexibility — you can make it your own by adding vegetables like spinach or mushrooms, or by swapping out the ground beef for ground turkey or plant-based options. The lasagna can even be made ahead of time and stored in the fridge, making it a great dish to prep for busy days. Paired with a fresh salad and garlic bread, it is a meal that is sure to satisfy all appetites.</p>
+    </div>
+    <h3 class="b-ing">Ingredients</h3>
+    <ul class="b-ing">
         <li>12 lasagna sheets</li>
         <li>1 lb ground beef</li>
         <li>1 onion, chopped</li>
@@ -27,8 +32,8 @@
         <li>Salt and pepper to taste</li>
         <li>Fresh basil (optional, for garnish)</li>
     </ul>
-    <h3>Steps</h3>
-    <ol type="1">
+    <h3 class="b-steps">Steps</h3>
+    <ol class="b-steps" type="1">
         <li>Preheat the oven to 375°F (190°C).</li>
         <li>Cook the lasagna noodles according to package instructions, drain, and set aside.</li>
         <li>In a large pan, brown the ground beef over medium heat, breaking it up with a spoon. Add chopped onion and minced garlic, cooking until softened, about 5 minutes.</li>
@@ -39,6 +44,6 @@
         <li>Remove the foil and bake for an additional 10-15 minutes, or until the cheese is bubbly and golden brown.</li>
         <li>Let the lasagna rest for 10 minutes before serving. Garnish with fresh basil if desired. Enjoy!</li>
     </ol>
-    <p><a href="../index.html">Home</a></p>
+    <a href="../index.html"><button id="btn">Home</button></a>
 </body>
 </html>
